# githubworkflow

./: CMakeLists.txt  GithubWorkFlow.desktop  main.cpp  version_info.ps1
.github/workflows/: build.yaml  linux_pwsh.yaml  release.yaml  test_linux_deploy.yaml
